force-app/main/default/objects/Compliance_Review__c/Compliance_Review__c.object-meta.xml
<CustomObject>
    <label>Compliance Review</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>