force-app/main/default/objects/Compliance_Review__c/fields/Compliance_Category__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Category__c</fullName>
    <label>Compliance Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEBI Regulation</fullName>
            </value>
            <value>
                <fullName>Internal Policy</fullName>
            </value>
            <value>
                <fullName>Risk Policy</fullName>
            </value>
            <value>
                <fullName>AML (Anti-Money Laundering)</fullName>
            </value>
            <value>
                <fullName>KYC Verification</fullName>
            </value>
            <value>
                <fullName>Position Limit</fullName>
            </value>
            <value>
                <fullName>Market Abuse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>