force-app/main/default/objects/Compliance_Review__c/fields/Compliance_Decision__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Decision__c</fullName>
    <label>Compliance Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved with Remarks</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Requires Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>