force-app/main/default/objects/Compliance_Review__c/fields/Days_Pending__c.field-meta.xml
<CustomField>
    <fullName>Days_Pending__c</fullName>
    <formula>TODAY() - Review_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>