force-app/main/default/objects/Compliance_Review__c/fields/Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason__c</fullName>
    <label>Escalation Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>