force-app/main/default/objects/Compliance_Review__c/fields/Regulatory_Reference__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Reference__c</fullName>
    <label>Regulatory Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>