force-app/main/default/objects/Compliance_Review__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>