force-app/main/default/objects/Compliance_Review__c/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <formula>IF(
TODAY() &gt; Due_Date__c,
&quot;Overdue&quot;,
&quot;Within SLA&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Status</label>
    <type>Text</type>
</CustomField>