force-app/main/default/objects/Compliance_Review__c/fields/Trade_Request__c.field-meta.xml
<CustomField>
    <fullName>Trade_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Request</label>
    <referenceTo>Trade_Request__c</referenceTo>
    <relationshipLabel>Compliance Reviews</relationshipLabel>
    <relationshipName>Compliance_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>