force-app/main/default/objects/Compliance_Review__c/validationRules/Compliance_Decision_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Compliance_Decision_cannot_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Review_Status__c,&quot;Closed&quot;),
ISBLANK(TEXT(Compliance_Decision__c))
)</errorConditionFormula>
    <errorDisplayField>Compliance_Decision__c</errorDisplayField>
    <errorMessage>Compliance Decision cannot be blank.</errorMessage>
</ValidationRule>