force-app/main/default/objects/Compliance_Review__c/validationRules/Due_Date_must_be_after_Review_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_must_be_after_Review_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Due_Date__c &lt; Review_Date__c</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date must be after Review Date.</errorMessage>
</ValidationRule>