force-app/main/default/objects/Compliance_Review__c/validationRules/Escalation_Reason_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Escalation_Reason_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Escalation_Required__c,
ISBLANK(Escalation_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Escalation_Reason__c</errorDisplayField>
    <errorMessage>Escalation Reason is mandatory if Escalation Required is checked.</errorMessage>
</ValidationRule>